# derive-io

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/derive-io/: Cargo.toml  README.md
crates/derive-io-macros/: Cargo.toml
crates/derive-io-macros/src/: lib.rs
crates/derive-io/src/: lib.rs
examples/stdio/: Cargo.toml
examples/stdio/src/: lib.rs  main.rs
examples/stdio/tests/: test_runner.rs
examples/tokio/: Cargo.toml
examples/tokio/src/: as_ref.rs  complex_stream.rs  deref.rs  duck_type.rs  generic_enums.rs  generic_structs.rs  lib.rs  main.rs  named_structs.rs  override_example.rs  tokio_streams.rs  tuple_structs.rs
examples/tokio/tests/: test_runner.rs
