[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.5.0" # <-- change versions below!
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
repository = "https://github.com/mmastrac/derive-io"

[workspace.dependencies]
derive-io-macros = { path = "crates/derive-io-macros", version = "=0.5.0" }
derive-io = { path = "crates/derive-io", version = "=0.5.0" }
