[package]
name = "stdio-example"
version.workspace = true
edition.workspace = true
publish = false
default-run = "stdio-example"

[dependencies]
derive-io = { workspace = true, features = ["tokio"] }
derive-io-macros.workspace = true
derive_more = { version = "2", features = ["full"] }

[[bin]]
name = "stdio-example"

[lib]

[[test]]
name = "test_runner"
harness = false
