[package]
name = "tokio"
version.workspace = true
edition.workspace = true
publish = false
default-run = "tokio"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
derive-io = { workspace = true, features = ["tokio"], version = "0.1" }
derive-io-macros = { workspace = true, version = "0.1" }

[[bin]]
name = "tokio"
